plugins/kotlin/idea/tests/testData/checker/codeFragments/secondaryConstructorWithoutBraces.kt.fragment.k2
<error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'a'.">a</error> + b + c + a1